fix chrome issue and readability

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -89,6 +89,9 @@ a,
   p,
   .info {
     font-size: 0.875rem; /* 18px */
+    color: #000000;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: #000000;
   }
 }
 @media (max-width: 767px) {
